--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,25 @@
-extends layout
+doctype html
+html(lang='en')
+  head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    title GCMS Entry
+    link(rel='stylesheet', href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
+    script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+    link(rel='stylesheet', href='jtree/dist/themes/default/style.min.css')
+    script(src='jtree/dist/jstree.min.js')
 
-block content
-  h1= title
-  p Welcome to #{title}
+  body
+    .container-fluid
+      .row
+        .col-md-12
+          h3.text-center Welcome to GCMS system
+          .jumbotron
+            #MyTree
+            ul#my_db_list
+            p Click here to Login
+            p
+              a#Entry_Btn_Login.btn.btn-primary.btn-large(href='#') Login
+    script(src='client.js')
