--- a/views/index.jade
+++ b/views/index.jade
@@ -17,9 +17,9 @@ html(lang='en')
         .col-md-12
           h3.text-center Welcome to GCMS system
           .jumbotron
+            #MyTree
             ul#my_db_list
+            p Click here to Login
             p
-              a#Entry_Btn_Login.btn.btn-primary.btn-large(href='#') Load all items
-              #MyTree
-
+              a#Entry_Btn_Login.btn.btn-primary.btn-large(href='#') Login
     script(src='client.js')
