get all working

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,5 @@ html(lang='en')
           .jumbotron
             #MyTree
             ul#my_db_list
-            p Click here to Login
-            p
-              a#Entry_Btn_Login.btn.btn-primary.btn-large(href='#') Login
+              a#Entry_Btn_Login.btn.btn-primary.btn-large(href='#') View all files
     script(src='client.js')
